:bug: change style of overflow in pre tag to 'auto' from 'hidden'

--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -69,7 +69,7 @@
   border: 1px solid #ddd;
   border-radius: 6px;
   font-size: 12px;
-  overflow: hidden;
+  overflow: auto;
   padding: 8px 16px;
   margin-bottom: 16px;
   text-wrap: nowrap;
